# cloudknox

./: Azure-AD-Group-Naming-Convention.md  CHANGELOG.md  Enterprise Office 365 External Sharing Audit & Compliance Report  LICENSE  Naming-Convention-Gap-Analysis.md  Naming-Convention-Whitepaper.md  README.md  Test_API_calls  log.md  package-lock.json  package.json  raise_ISE_memory.md  sameDevOpsEnvironment.ps1  tailwind.config.ts
.github/workflows/: cis-edge-macos-ci.yml
Device-Rename-GroupTAG-Enhanced/: LICENSE  README.md
Device-Rename-GroupTAG-Enhanced/docs/: DynamicDeviceRenaminginIntuneUsingGroupTagsandPowerShell-EnhancedVersionv2.0
Device-Rename-GroupTAG-Enhanced/examples/: README.md
Device-Rename-GroupTAG-Enhanced/modules/: TeamsIntegrationModule.psm1
DevicePolicyRemovalTool/: DevicePolicyRemovalTool - Enhanced User Guide.md  DevicePolicyRemovalTool_Enhanced.ps1  README.md
Intune-DDG-AutoCreator-Ultimate/examples/: README.md
Intune-DDG-AutoCreator-Ultimate/script1/: README.md
Intune-DDG-AutoCreator-Ultimate/shared-config/: config-ultimate.json
OOBE Autopilot Registration/: OOBE Autopilot Registration - Minimal Version.md  OOBE Autopilot Registration - Minimal Version.ps1
app/: globals.css  layout.tsx  page.tsx
m365-assessment/: .env.local.example  README.md  next.config.mjs  package-lock.json  package.json
m365-assessment/public/: manifest.webmanifest  sw.js
m365-assessment/src-tauri/: Cargo.toml  tauri.conf.json
m365-assessment/src-tauri/capabilities/: default.json
m365-assessment/src-tauri/src/: main.rs
(+105 files in other folders)
